# nodes-irc

./: .gitignore  CMakeLists.txt  Gemfile  README.md  test.sh
config/: services.rb
features/: hello.feature  list.feature  message.feature  missingname.feature  multiplelogin.feature
features/step_definitions/: irc.rb  steps.rb
features/support/: env.rb  hooks.rb
include/: channel.hpp  parser.hpp  prefixable.hpp  request.hpp  server.hpp  session.hpp  sslsession.hpp  tcpsession.hpp  user.hpp  vecutil.hpp  zmqclient.hpp
node/: irc.js  local-irc.sh  package-lock.json  package.json
node/node-irc/: index.js  server.js  user.js
node/node-irc/commands/: join.js  nick.js  user.js
nodejs/: irc.js  local-irc.sh  package.json
nodejs/node-irc/: channel.js  server.js  user.js
nodejs/node-irc/commands/: privmsg.js  user.js
nodejs/node-irc/test/: index.js
nodes-irc.bbprojectd/: paul.bbprojectsettings  project.bbprojectdata  project.lockfile
scripts/: build.sh  start.sh  startssl.sh  stop.sh
src/: channel.cpp  commands.cpp  nodes-irc.cpp  parser.cpp  request.cpp  server.cpp  session.cpp  sslsession.cpp  tcpsession.cpp  user.cpp  zmqclient.cpp  zmqirc.cpp
test/: CMakeLists.txt  nodes.cpp  testchannel.cpp  testparser.cpp  testsession.cpp  zmqchat.cpp
test/node/: local-nodes.sh  nodes.js  package-lock.json  package.json
test/nodejs/: local-zmqchat.sh  zmqchat.js
zmqirc.bbprojectd/: paul.bbprojectsettings  project.bbprojectdata  project.lockfile
